# LD50

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .luacheckrc  .swp  CMakeLists.txt  Makefile  Overworld.sublime-project  TODO
client/: CMakeLists.txt
client/include/: CMakeLists.txt
client/include/od/: CMakeLists.txt
client/include/od/core/: CMakeLists.txt  allocation.h  allocation.hpp  api.h  array.h  array.hpp  bounds.h  box.h  box.hpp  color.h  color.hpp  container.h  container.hpp  containers.h  containers.hpp  debug.h  debug.hpp  fast_array.hpp  math.h  matrix.h  module.h  primitive.h  string.h  string.hpp  transform.h  trivial_array.hpp  type.h  type.hpp  vector.h  vertex.h  vertex.hpp  viewport.h
client/include/od/engine/: CMakeLists.txt  atlas.h  atlas.hpp  client.h  client.hpp  engine.h  engine.hpp  entity.h  entity.hpp  entity_index.h  entity_index.hpp  lua_client.h  lua_client.hpp  lua_wrapper.h  lua_wrapper.hpp  lua_wrappers.h  lua_wrappers.hpp  module.h  tag.h  tagset.h  texture_atlas.h  texture_atlas.hpp  world.h  world.hpp
client/include/od/engine/lua/: CMakeLists.txt  bindings.h  client.h  client.hpp  wrappers.h  wrappers.hpp
client/include/od/platform/: CMakeLists.txt  ascii_font.h  audio.h  audio.hpp  file.h  file.hpp  image.h  image.hpp  module.h  music.h  music.hpp  primitive.h  render_state.h  render_texture.h  render_texture.hpp  renderer.h  renderer.hpp  rendering.h  rendering.hpp  texture.h  texture.hpp  timer.h  vertex.h  vertex.hpp  window.h  window.hpp
client/include/od/test/: CMakeLists.txt  test.h  test.hpp
client/lib/zlib-1.2.11/: CMakeLists.txt
client/src/: CMakeLists.txt
client/src/od/: CMakeLists.txt
client/src/od/client/: CMakeLists.txt  main.cpp  main.html
client/src/od/core/: CMakeLists.txt  allocation.cpp  array.cpp  bounds.cpp  box.cpp  color.cpp  container.cpp  containers.cpp  debug.cpp  fast_array.cpp  math.cpp  matrix.cpp  primitive.cpp  string.cpp  transform.cpp  trivial_array.cpp  type.cpp  vector.cpp  vertex.cpp
client/src/od/core/unit_test/: CMakeLists.txt  allocation.cpp  array.cpp  box.cpp  string.cpp
client/src/od/engine/: CMakeLists.txt  atlas.cpp  client.cpp  engine.cpp  entity.cpp  entity_index.cpp  lua_client.cpp  lua_wrapper.cpp  lua_wrappers.cpp  tag.cpp  tagset.cpp  texture_atlas.cpp  world.cpp
client/src/od/engine/lua/: CMakeLists.txt  bindings.cpp  bindings_ascii_font.cpp  bindings_audio.cpp  bindings_entity_index.cpp  bindings_music.cpp  bindings_render_state.cpp  bindings_render_texture.cpp  bindings_renderer.cpp  bindings_texture.cpp  bindings_texture_atlas.cpp  bindings_vertex_array.cpp  bindings_window.cpp  client.cpp  includes.h  wrappers.cpp
client/src/od/platform/: CMakeLists.txt  ascii_font.cpp  audio.cpp  file.cpp  gl.cpp  gl.h  image.cpp  music.cpp  platform.cpp  primitive.cpp  render_texture.cpp  renderer.cpp  rendering.cpp  sdl.cpp  sdl.h  texture.cpp  timer.cpp  vertex.cpp  window.cpp
client/src/od/platform/integration_test/: CMakeLists.txt  file.cpp  image.cpp  renderer.cpp  window.cpp
client/src/od/platform/unit_test/: CMakeLists.txt  file.cpp
client/src/od/test/: CMakeLists.txt  module.h  test.cpp  test.h  test.hpp
client/src/od/test/core/: CMakeLists.txt  allocation.cpp  array.cpp  bounds.cpp  box.cpp  container.cpp  containers.cpp  debug.cpp  fast_array.cpp  matrix.cpp  string.cpp  trivial_array.cpp  type.cpp
client/src/od/test/engine/: CMakeLists.txt  atlas.cpp  entity_index.cpp  lua_client.cpp  lua_wrappers.cpp  texture_atlas.cpp  world.cpp
client/src/od/test/engine/lua/: CMakeLists.txt  bindings.cpp  client.cpp  wrappers.cpp
client/src/od/test/platform/: CMakeLists.txt  ascii_font.cpp  audio.cpp  file.cpp  image.cpp  music.cpp  render_texture.cpp  renderer.cpp  rendering.cpp  texture.cpp  window.cpp
engine/: core.lua  engine.lua
engine/client/: ascii_font.lua  audio.lua  entity_index.lua  render_state.lua  render_texture.lua  renderer.lua  texture.lua  texture_atlas.lua  vertex_array.lua  window.lua
engine/core/: container.lua  debugging.lua  json.lua  logging.lua  math.lua  model.lua  schema.lua  serialization.lua  serializer.lua  shim.lua  testing.lua
engine/engine/: animation.lua  camera.lua  camera_target.lua  client.lua  controller.lua  debug.lua  entity.lua  game.lua  image.lua  sim.lua  systems.lua  template.lua  text.lua  world.lua
engine/engine/old/: input.lua  sim_old.lua
engine/lib/debugger/: debugger.lua
engine/sim/: input.lua  sim.lua
examples/engine_test/: all.lua  main.lua
examples/engine_test/data/: map.tmj
examples/minimal/: main.lua
examples/template/: data.lua  main.lua  systems.lua
examples/template/entities/: player.lua  solid.lua
include/: CMakeLists.txt
include/od/: CMakeLists.txt  core.h  core.hpp  test.hpp
include/od/core/: CMakeLists.txt  allocation.h  allocation.hpp  api.h  array.h  array.hpp  box.h  box.hpp  debug.h  debug.hpp  module.h  string.h  string.hpp  type.h  type.hpp  vector.h  vector.hpp
include/od/debug_gui/: CMakeLists.txt  debug_gui.h  module.h
include/od/platform/: CMakeLists.txt  api.h  color.h  file.h  file.hpp  image.h  image.hpp  module.h  renderer.h  window.h  window.hpp
ld50/: data.lua  main.lua  systems.lua
ld50/data/: map.json  map_min.json  map_test.json  sprites.tsx
ld50/entities/: fire.lua  grass.lua  player.lua  puddle.lua  sand.lua  terrain.lua  tree.lua  water.lua  weather.lua
lib/: CMakeLists.txt
module/engine/: main.lua
overworld/: CMakeLists.txt
overworld/include/od/: CMakeLists.txt
overworld/lib/: CMakeLists.txt
overworld/lib/libpng-1.6.37/: CMakeLists.txt
overworld/lib/libpng-1.6.37/scripts/: genchk.cmake.in
overworld/lib/lua-5.1.5/: CMakeLists.txt
overworld/src/od/: CMakeLists.txt
scripts/: generate_engine_all.py  make_release.sh
src/: CMakeLists.txt
src/od/: CMakeLists.txt
src/od/client/: main.cpp
src/od/core/: CMakeLists.txt  allocation.cpp  allocation_test.cpp  array.cpp  array_test.cpp  box.cpp  box_test.cpp  debug.cpp  debug_test.cpp  string.cpp  string_test.cpp  type.cpp  vector.cpp  vector_test.cpp
(+57 files in other folders)
